# hajimu_engine_rpg

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
examples/: hello_rpg.jp
include/: eng_rpg.h
src/: eng_battle.c  eng_db.c  eng_dialog.c  eng_extra.c  eng_save.c  plugin.c
